@@ -1,27 +1,25 @@
 package com.safronov.formula.demo.application.services.driver;
 
-import com.safronov.formula.demo.application.mappers.DriverMapper;
-import com.safronov.formula.demo.domain.DTO.DriverCardDto;
+import com.safronov.formula.demo.application.mappers.DriverCardMapper;
+import com.safronov.formula.demo.domain.dto.DriverCardDto;
 import com.safronov.formula.demo.domain.interfaces.driver.GetDriversService;
 import com.safronov.formula.demo.infrastructure.repositories.DriverRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 public class GetDriversServiceImpl implements GetDriversService {
     private final DriverRepository driverRepository;
-    private final DriverMapper driverMapper;
+    private final DriverCardMapper driverCardMapper;
 
-    public GetDriversServiceImpl(DriverRepository driverRepository, DriverMapper driverMapper) {
+    public GetDriversServiceImpl(DriverRepository driverRepository, DriverCardMapper driverCardMapper) {
         this.driverRepository = driverRepository;
-        this.driverMapper = driverMapper;
+        this.driverCardMapper = driverCardMapper;
     }
 
     @Override
     public List<DriverCardDto> get() {
-        return driverRepository.findAll().stream().map(driverMapper::mapToDTO).collect(toList());
+        return driverRepository.findAllDrivers().stream().map(driverCardMapper::mapToDTO).toList();
     }
 }
